Fixed toast z-index.

--- a/src/css/App.less
+++ b/src/css/App.less
@@ -6,16 +6,16 @@ html {
 body {
   margin: 0;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .hidden {
@@ -55,8 +55,8 @@ code {
 }
 
 .process-container .import-error pre {
-  border: solid 1px #CCC;
-  background: #EEE;
+  border: solid 1px #ccc;
+  background: #eee;
   padding: 10px;
 }
 
@@ -87,13 +87,12 @@ code {
   }
 
   > .djs-properties-panel {
-
     min-height: 100%;
   }
 }
 
 .save-buttons {
-  width: 40vw !important
+  width: 40vw !important;
 }
 
 //Viewer
@@ -128,8 +127,8 @@ code {
 }
 
 .viewer-process-container .import-error pre {
-  border: solid 1px #CCC;
-  background: #EEE;
+  border: solid 1px #ccc;
+  background: #eee;
   padding: 10px;
 }
 
@@ -180,8 +179,8 @@ code {
 }
 
 .dmn-container .import-error pre {
-  border: solid 1px #CCC;
-  background: #EEE;
+  border: solid 1px #ccc;
+  background: #eee;
   padding: 10px;
 }
 
@@ -205,7 +204,7 @@ code {
 }
 
 .dmn-save-buttons {
-  width: 15vw !important
+  width: 15vw !important;
 }
 
 //CodeMirror
@@ -221,4 +220,9 @@ code {
 .instructions-description {
   font-size: large;
   font-weight: 300;
+}
+
+//SavedToast
+.saved-toast {
+  z-index: 11;
 }
